conclusion versão 1 treinamento.